refactored app.py
